Fixed app button spacing and made contact info same size

--- a/css/custom.css
+++ b/css/custom.css
@@ -189,7 +189,7 @@ figure:hover .overlay {
     left: 0;
     right: 0;
     margin: auto;
-    bottom: 25%;
+    bottom: 30%;
   }
   figure figcaption {
     /* padding: 20px 25px; */
